# Cellox

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  SampleProgram.klx  annotated.html  annotated_dup.js  chunk.c  chunk.h  chunk_8c.html  chunk_8h.html  chunk_8h_source.html  chunk__disassembler_8c.html  chunk__disassembler_8h.html  chunk__disassembler_8h_source.html  chunk__file_8c.html  chunk__file_8c.js  chunk__file_8h.html  chunk__file_8h.js  chunk__file_8h_source.html  chunk__optimizer_8c.html  chunk__optimizer_8h.html  chunk__optimizer_8h.js  chunk__optimizer_8h_source.html  classes.html  command__line__argument__parser_8c.html  command__line__argument__parser_8c.js  command__line__argument__parser_8h.html  command__line__argument__parser_8h_source.html  common.h  common_8c.html  common_8h.html  common_8h.js  common_8h_source.html  compiler.c  compiler.h  compiler_8c.html  compiler_8c.js  compiler_8h.html  (+167 more)
benchmark/: CMakeLists.txt  FibonacciBenchmark.clx  NegateBenchmark.clx  ZooBenchmark.clx  benchmark.c  benchmark.h  benchmark_argument_parser.c  benchmark_argument_parser.h  benchmark_config.h  benchmark_runner.c  benchmark_runner.h  command_line_argument_parser.c  command_line_argument_parser.h  common.h  dynamic_benchmark_config_array.c  dynamic_benchmark_config_array.h  main.c
benchmark/benchmarks/: Equality.clx  Fibonacci.clx  FibonacciBenchmark.clx  Instantiation.clx  MethodCall.clx  Negate.clx  Properties.clx  Raise.clx  StringEquality.clx  Zoo.clx
disassembler/: CMakeLists.txt  disassembler.c  disassembler.h  main.c
src/: CMakeLists.txt  CPackConfig.cmake  Doxyfile  cellox_config.h.in  chunk.c  chunk.h  chunk_file.c  chunk_file.h  chunk_optimizer.c  chunk_optimizer.h  command_line_argument_parser.c  command_line_argument_parser.h  common.c  common.h  compiler.c  compiler.h  debug.c  debug.h  dynamicArray.c  dynamicArray.h  dynamic_array.c  dynamic_array.h  dynamic_value_array.c  dynamic_value_array.h  garbage_collector.c  garbage_collector.h  hash_table.c  hash_table.h  init.c  init.h  initializer.c  initializer.h  lexer.c  lexer.h  main.c  main.dox  memory.c  memory.h  memory_mutator.h  nativeFun.c  (+23 more)
src/backend/: chunk_file.h  debug.c  debug.h  dynamic_value_array.h  garbage_collector.c  garbage_collector.h  hash_table.c  hash_table.h  memory_mutator.c  memory_mutator.h  native_functions.c  native_functions.h  object.c  object.h  virtual_machine.c  virtual_machine.h
src/byte-code/: chunk.c  chunk.h  chunk_disassembler.c  chunk_disassembler.h  chunk_file.c  chunk_file.h
src/frontend/: chunk.h  compiler.c  compiler.h  lexer.c  lexer.h
src/language-models/: object.c  object.h  value.c  value.h
src/middle-end/: chunk_optimizer.c  chunk_optimizer.h
src/middleend/: chunk_optimizer.c  chunk_optimizer.h
test/: CMakeLists.txt  array.cc  assignment_operator.cc  assignment_operators.cc  assignmentoperator.cc  binary_operator.cc  binary_operators.cc  binaryoperator.cc  class.cc  comments.cc  compile.cc  do_while.cc  else_statement.cc  escape_sequences.cc  fields.cc  forLoops.cc  for_loops.cc  functions.cc  if_statement.cc  index_operator.cc  limits.cc  literalExpressions.cc  literal_expressions.cc  logical_operators.cc  method.cc  native_functions.cc  range_operator.cc  return.cc  return_keyword.cc  returnkeyword.cc  slice.cc  strings.cc  super.cc  testUtils.cc  testUtils.hh  test_cellox.cc  test_cellox.hh  this.cc  unary_operator.cc  unaryoperator.cc  (+3 more)
test/array/: change_by_index.clx  equal_operator.clx  get_by_index.clx  plus_operator.clx
test/assignmentOperators/: associativity.clx  chained.clx  divideEqual.clx  divide_equal.clx  minus_equal.clx  modulo_equal.clx  plusEqual.clx  plus_equal.clx  raise_equal.clx  simpleAssignment.clx  simple_assignment.clx  star_equal.clx  to_bool.clx
test/assignment_operators/: associativity.clx  chained.clx  divide_equal.clx  minus_equal.clx  modulo_equal.clx  plus_equal.clx  raise_equal.clx  simple_assignment.clx  star_equal.clx  to_null.clx  to_number.clx  to_string.clx
test/binaryOperators/: divide.clx  divideoperator.clx  equal.clx  greater.clx  greater_equal.clx  minus.clx  minusoperator.clx  modulo.clx  modulooperator.clx  multiply.clx  multiplyoperator.clx  not_equal.clx  plus.clx  plusoperator.clx  raise.clx  smaller.clx  smaller_equal.clx  smallerequal.clx
test/binary_operators/: divide.clx  equal.clx  greater.clx  greater_equal.clx  minus.clx  modulo.clx  multiply.clx  not_equal.clx  plus.clx  raise.clx  smaller.clx  smaller_equal.clx
test/class/: constructor.clx  emptyClass.clx  empty_class.clx  inheritField.clx  inheritMethod.clx  inherit_field.clx  inherit_from_bool.clx  inherit_from_function.clx  inherit_from_instance.clx  inherit_from_null.clx  inherit_from_number.clx  inherit_method.clx  inherit_self.clx  init_missing_args.clx  no_explizit_init.clx  printInstance.clx  print_instance.clx  serialize_fields.clx  undefiened_property.clx
test/comments/: multiLine.clx  multi_line.clx  nested.clx  singleLine.clx  single_line.clx  unicode_in_comment.clx  unterminated_comment.clx
test/compile/: simple.clx
test/do_while/: at_least_once.clx  block_body.clx  class_in_body.clx  empty_condition.clx  single_statement_body.clx  var_in_body.clx
test/else_statement/: class_in_else.clx  dangling.clx  function_in_else.clx  simple.clx  variable_in_else.clx
test/escapeSequences/: alpha.clx  hexNumber.clx  hex_number.clx  octalNumber.clx  octal_number.clx  special_characters.clx  specialcharacters.clx  unknown.clx
test/escape_sequences/: alpha.clx  hex_number.clx  octal_number.clx  special_characters.clx
test/fields/: call.clx  get_on_bool.clx  get_on_class.clx  get_on_function.clx  get_on_number.clx  get_on_string.clx  inherit.clx  on_instance.clx  serialize.clx  set_on_bool.clx  set_on_class.clx  set_on_function.clx  set_on_null.clx  set_on_number.clx  set_on_string.clx  undefiened.clx
test/forLoops/: no_counter_increment_expression.clx  no_variable.clx  normal_for.clx
test/for_loops/: no_counter_increment_expression.clx  no_variable.clx
test/functions/: duplicate_parameter.clx  (+6 more)
(+614 files in other folders)
